--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.interview"
-        minSdk 24
+        minSdk 27
         targetSdk 34
         versionCode 1
         versionName "1.0"
@@ -57,4 +57,7 @@ dependencies {
 
 
 //    implementation "com.android.billingclient:billing-ktx:6.1.0"
+
+    implementation 'com.piesocket:channels-sdk:1.0.5'
+    implementation "com.squareup.okhttp3:okhttp:4.9.3"
 }
