--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,9 @@ android {
     viewBinding {
         enabled = true
     }
+    dataBinding{
+        enabled= true
+    }
 }
 
 dependencies {
@@ -60,4 +63,6 @@ dependencies {
 
     implementation 'com.piesocket:channels-sdk:1.0.5'
     implementation "com.squareup.okhttp3:okhttp:4.9.3"
+
+    implementation 'com.github.ZEGOCLOUD:zego_uikit_prebuilt_live_streaming_android:+'
 }
