--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PieSocketAndroidSDK"
-
         tools:targetApi="31">
+        <activity
+            android:name=".new1.livestream.LiveStreamActivity"
+            android:exported="false" />
         <activity
             android:name=".new1.websocket.ProductBillingActivity"
             android:exported="false" />
